--- a/vijay.html
+++ b/vijay.html
@@ -1,2 +1,6 @@
 <center> <h1>Vijay</h1>
 </center>
+<hr>
+<p>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et esse perspiciatis iure quae hic itaque, culpa non molestiae. Tempore mollitia saepe necessitatibus, sapiente dolorem fuga voluptatibus deleniti ipsum exercitationem alias?
+</p>
