added phon e no

--- a/vijay.html
+++ b/vijay.html
@@ -4,3 +4,5 @@
 <p>
     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et esse perspiciatis iure quae hic itaque, culpa non molestiae. Tempore mollitia saepe necessitatibus, sapiente dolorem fuga voluptatibus deleniti ipsum exercitationem alias?
 </p>
+
+<p>contact no :077343005</p>
